# summit

./: CLAUDE.md  Cargo.toml  example_genesis.toml
application/: Cargo.toml
application/src/: actor.rs  ingress.rs
docs/: README.md  architecture.md  checkpointing.md  deposits-and-withdrawals.md  engine-api-integration.md  staking-and-participating.md
finalizer/: Cargo.toml
finalizer/benches/: consensus_state_write.rs
finalizer/src/: actor.rs  archive.rs  config.rs  db.rs  ingress.rs  lib.rs
finalizer/src/tests/: fork_handling.rs  mocks.rs  mod.rs  state_queries.rs  validator_lifecycle.rs
node/: Cargo.toml
node/src/: args.rs  config.rs  engine.rs  keys.rs  lib.rs
node/src/test_harness/: common.rs  mock_engine_client.rs  mod.rs  transactions.rs
node/src/tests/: checkpointing.rs  execution_requests.rs  mod.rs  syncer.rs
node/src/tests/checkpointing/: creation.rs  joining.rs  mod.rs  verification.rs
node/src/tests/execution_requests/: deposit_withdrawal_combined.rs  deposits.rs  mod.rs  protocol_params.rs  validator_set.rs  withdrawals.rs
orchestrator/: Cargo.toml
orchestrator/src/: actor.rs
rpc/: Cargo.toml
rpc/src/: api.rs  builder.rs  error.rs  genesis.rs  lib.rs  routes.rs  server.rs  types.rs
rpc/tests/: integration_test.rs  utils.rs
syncer/: Cargo.toml
syncer/src/: actor.rs  cache.rs  config.rs  lib.rs
syncer/src/ingress/: handler.rs  mailbox.rs
syncer/src/mocks/: application.rs  block.rs  fixtures.rs
syncer/src/resolver/: p2p.rs
types/: Cargo.toml
types/src/: account.rs  block.rs  bootstrap.rs  checkpoint.rs  consensus_state.rs  consensus_state_query.rs  engine_client.rs  execution_request.rs  genesis.rs  header.rs  keystore.rs  lib.rs  network_oracle.rs  protocol_params.rs  rpc.rs  scheme.rs  utils.rs  withdrawal.rs
