[package]
name = "summit-orchestrator"
version.workspace = true
edition.workspace = true

[dependencies]
summit-types.workspace = true
summit-syncer.workspace = true

commonware-broadcast.workspace = true
commonware-codec.workspace = true
commonware-consensus.workspace = true
commonware-cryptography.workspace = true
commonware-macros.workspace = true
commonware-resolver.workspace = true
commonware-runtime.workspace = true
commonware-storage.workspace = true
commonware-p2p.workspace = true
commonware-parallel.workspace = true
commonware-utils.workspace = true

bytes.workspace = true
futures.workspace = true
governor.workspace = true
rand.workspace = true
rand_core.workspace = true
tokio-util.workspace = true
tracing.workspace = true


