[package]
name = "summit-rpc"
version.workspace = true
edition.workspace = true

[lib]
name = "summit_rpc"
path = "src/lib.rs"

[dependencies]
summit-finalizer.workspace = true
summit-types = { workspace = true }
anyhow = { workspace = true }
alloy-primitives.workspace = true
tokio = { workspace = true, features = ["net"] }
tokio-util.workspace = true
futures.workspace = true
async-trait = "0.1"
jsonrpsee = { version = "0.26.0", features = ["server", "client", "macros"] }
jsonrpsee-core = "0.26.0"
jsonrpsee-types = "0.26.0"
commonware-consensus = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-utils = { workspace = true }
commonware-codec = { workspace = true }
commonware-runtime = { workspace = true }
ethereum_ssz.workspace = true
dirs = "5.0.1"
serde = { workspace = true }
serde_json = { workspace = true }
tracing.workspace = true
tower = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
http = { workspace = true }
hyper = "1.0"
bytes = { workspace = true }
http-body-util = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["net", "rt-multi-thread", "macros"] }
commonware-math.workspace = true
rand.workspace = true
