[package]
name = "summit-types"
version.workspace = true
edition.workspace = true

[dependencies]
commonware-cryptography.workspace = true
commonware-consensus.workspace = true
commonware-codec.workspace = true
commonware-math.workspace = true
commonware-utils.workspace = true
commonware-resolver.workspace = true
commonware-p2p.workspace = true
commonware-runtime.workspace = true
commonware-parallel.workspace = true

alloy-rpc-types-engine.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-provider.workspace = true
alloy-transport-ipc.workspace = true

futures.workspace = true
# for reth.rs module (e2e feature only)
alloy-genesis = { workspace = true, optional = true }
rand.workspace = true
url = { workspace = true, optional = true }
anyhow.workspace = true
dirs.workspace = true
ethereum_ssz.workspace = true
serde.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true

bytes.workspace = true
serde_json = { workspace = true, optional = true }

# for benchmarking
libc = { version = "0.2.174", optional = true}

[features]
bench = ["serde_json"]
e2e = ["libc", "alloy-genesis", "url"]
bad-blocks = []